# situacion_financiera

./: .gitignore  .pre-commit-config.yaml  README.md  generar_hogares.py  pyproject.toml
docs/: api_reference.md  architecture.md  contributing.md  data_dictionary.md  development_guide.md
series/: charts.yaml  instruments.yaml  tables.yaml  template.yaml
src/: __init__.py  charts.py  report.py  store.py  tables.py
src/artists/: stacked.py
src/pipeline/: __init__.py  engine.py  rules.py
src/providers/: __init__.py  base.py  bde.py
tests/: test_bde_provider.py  test_charts.py  test_engine.py  test_generar_hogares.py  test_report.py  test_rules.py  test_stacked.py  test_store.py  test_tables.py
