[project]
name = "hogares"
version = "0.0.0"
description = "Generación automatizada del informe de Situación Financiera de los Hogares"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=18.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "python-docx>=1.2.0",
    "tesorotools-python[bde,ecb]>=0.0.30",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=4.0",
    "pandas-stubs>=2.2",
    "coverage>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__"',
    '^\s*\.\.\.$',
    'if TYPE_CHECKING',
]

[tool.ruff]
line-length = 80

[tool.pyright]
pythonVersion = "3.14"
extraPaths = ["."]
typeCheckingMode = "strict"
